[ASOC:46457] Fixed selector issue and ip addresses alignments (#1984)
* filled selector issue and ip address alignments

*  minor css changes for ip addresses

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-content.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-content.scss
@@ -33,7 +33,7 @@
     }
   }
   &__ip-details {
-    padding: rsa-whitespace();
+    padding: rsa-whitespace(less);
     &__icon {
       margin-top: -0.19rem;
       margin-right: rsa-whitespace()
